# AutoAce-Assignment

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: DASHBOARD-BACKEND-REQUESTS.md  DASHBOARD-KICKOFF.md  decisions.md  technical-memo.md
docs/experiments/: 2026-07-17-budget-accuracy-study.md
docs/superpowers/plans/: 2026-07-16-autoace-backend.md  2026-07-17-budget-accuracy-study.md  2026-07-17-dashboard-resume-state.md  2026-07-17-dashboard.md  2026-07-17-phase2-experiments.md
docs/superpowers/specs/: 2026-07-16-autoace-backend-design.md  2026-07-17-budget-accuracy-study-design.md  2026-07-17-dashboard-design.md
eval/: bakeoff.py  build_validation_set.py  evaluate.py  metrics.py
eval/experiments/: combined.py  common.py  exp0_baseline.py  exp1_gap_noise.py  exp2_fewshot.py  exp3_advocate.py  exp4_flash.py  exp5_overlap.py  exp6_gap_vote.py  exp7_tone_vote.py  run_all.py
scripts/: build_memo_pdf.py
src/autoace_audio/: __init__.py  __main__.py  audio_io.py  batch.py  config.py  fusion.py  pipeline.py  schema.py
src/autoace_audio/analyzers/: noise.py  quality.py  vad.py
src/autoace_audio/analyzers/tone/: base.py  dimensional.py  gemini_tone.py  transcript_llm.py
src/dashboard/: api.py  app.py  audit.py  auth.py  config.py  hash_password.py  runner.py  store.py  worker.py  zipsafe.py
tests/: conftest.py
tests/integration/: test_noise_sample_calls.py  test_pipeline_sample_calls.py  test_quality_sample_calls.py  test_tone_sample_calls.py  test_vad_sample_calls.py
tests/unit/: test_audio_io.py  test_bakeoff.py  test_batch.py  test_combined.py  test_config.py  test_exp1_gaps.py  test_exp2_excerpt.py  test_exp3_advocate.py  test_exp4_flash.py  test_exp5_overlap_math.py  test_exp6_gap_vote.py  test_exp7_tone_vote.py  test_experiments_common.py  test_fusion.py  test_gemini_parse.py  test_gemini_prompt.py  test_main.py  test_metrics.py  test_noise_logic.py  test_pipeline.py  test_quality_logic.py  test_run_all.py  test_schema.py  test_tone_mapping.py  test_vad_logic.py
tests/web/: conftest.py  test_audit.py  test_auth.py  test_config.py  test_job_routes.py  test_runner.py  test_static.py  test_store.py  test_upload.py  test_zipsafe.py
webapp/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
webapp/e2e/: smoke.spec.js
webapp/src/: App.jsx  api.js  index.css  main.jsx
webapp/src/components/: LiveQueue.jsx  ResultsSection.jsx  StatusChip.jsx  UploadCard.jsx  ValidationReport.jsx
webapp/src/lib/: status.js  status.test.js
webapp/src/pages/: JobPage.jsx  JobsPage.jsx  LoginPage.jsx
